--- a/index.html
+++ b/index.html
@@ -3,12 +3,92 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style/styles.css">
-<title>Your Name Here</title>
+<link rel="stylesheet" href="style/styles.css">
+<title>Liana Rodriguez</title>
 </head>
 
 <body>
-
+	<div class="top-nav">
+	     <div>
+			<img src="images/logo.png" alt="Logo"> 
+		</div> 
+		<input id="menu-toggle" type="checkbox" />
+		<label class="menu-button-container" for="menu-toggle">
+		<div class="Menu-button"></div>
+	  </label>
+	  <ul class="menu">
+		  <li>HOME</li>
+		  <li>MENU</li>
+		  <li>RESERVATIONS</li>
+		  <li>REVIEWS</li>
+		  <li>ABOUT US</li>
+		  <li>THE BLOG</li>
+		  <li>CONTACT US</li>
+		</ul>
+	</div>
+	<div id="hero">
+			<h1>ALL THE PASTA<br>
+			YOU CARE TO EAT!</h1>
+			<p>STARTING FROM</p>
+			
+	</div>
+	<section class="col-2">
+		<div class="icons">
+			<img src="images/pizzaicon.jpg" alt="pizza icon">
+			<h1>THE FINEST INGREDIENTS</h1>
+			<p>Italian Joy Restaurant is a place that<br>
+				takes pride in fresh ingrdienrs<br>
+				that make up our tasty dishes.</p>
+			<a href="#">Learn More</a>
+		</div>
+		<div class="icons">
+			<img src="images/deliveryIcon.png" alt="delivery icon">
+			<h1>THE QUICKEST DELIVERY</h1>
+			<p>Order online today and have hot,<br>
+			fresh delicisous Italian food<br>
+		deilvered right to your front door</p>
+		<a href="#">Learn More</a>
+		</div>
+		</div>
+	</section>
+	<section class="col-2">
+		<div class="hero2">
+			<h1>LARGE PIZZA<br>
+			W/ UNLIMITED<br>
+		    TOPPINGS</h1>
+				
+		</div>
+	</section>
+	<section class="col-2">
+		<div class="map">
+			<h1>OUR LOCATIONS</h1>
+            <img src="images/map.jpg" alt="map" width="576">
+		</div>
+	</section>
+	<footer class="footer">
+		<h1>ITALIAN JOY</h1>
+		<p>NOW WITH 2 LOCATIONS </p>
+		<div class="location">
+		<div class="address">
+			<p>123 Nowhere Lane<br>
+			Orlando, FL 32806<br>
+			(407)555-1234
+		</p>
+		</div>
+		<div class="address">
+			<p>
+				456 Here'n There Lane<br>
+				Casselberry, FL 32707<br>
+				(407)555-1234
+			</p>
+		</div>
+	</div>
+		<h2>JOIN OUT MAILING LIST</h2>
+		<form>
+		<input type="email" id="email" name="email address">
+		<input type="SUBMIT">
+		</form>
+	</footer>
   
 </body>
 </html>
